chore: run intellij code cleanup